<resources>
    <string name="app_name">Lost Cities Calculator</string>
    <string name="title_player1">Player 1</string>
    <string name="title_player2">Player 2</string>
    <string name="title_score">Scoreboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_score_short">Score</string>
    <string name="label_button2">2</string>
    <string name="label_button3">3</string>
    <string name="label_button4">4</string>
    <string name="label_button5">5</string>
    <string name="label_button6">6</string>
    <string name="label_button7">7</string>
    <string name="label_button8">8</string>
    <string name="label_button9">9</string>
    <string name="label_button10">10</string>
    <string name="label_reset">Reset</string>
    <string name="label_submit">Submit</string>
    <string name="label_reset_game">Restart</string>
    <string name="label_end_game">End Game</string>
    <string name="label_save_game">Save</string>
    <string name="label_load_game">Load</string>
    <string name="label_zero">0</string>
    <string name="label_yellow_wager">yellow wager</string>
    <string name="label_white_wager">white wager</string>
    <string name="label_blue_wager">blue wager</string>
    <string name="label_green_wager">green wager</string>
    <string name="label_red_wager">red wager</string>
    <string name="label_purple_wager">purple wager</string>
    <string name="current_score">Current Round:</string>
    <string name="current">Current</string>
    <string name="total_score">Total Score:</string>
    <string name="total_label">Total</string>
    <string name="final_label">Score</string>
    <string name="round">Round</string>
    <string name="empty_rounds_placeholder">No rounds completed yet.</string>
    <string name="eight_card_bonus_label">8</string>
    <string name="label_endgame_title">Game Over</string>

    <string name="back_button_desc">back button</string>
    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="round_limit_header">Round Limit</string>
    <string name="custom_names_header">Custom Names</string>

    <!-- General Preferences -->
    <string name="show_score_switch">Show Scoreboard on Submit</string>
    <string name="show_score_switch_summary_on">Automatically switch to the Scoreboard tab when
        scores for a round are submitted
    </string>
    <string name="show_score_switch_summary_off">Don\'t automatically switch to the Scoreboard tab
        when scores for a round are submitted.
    </string>

    <!-- Round Limit Preferences -->
    <string name="round_limit_switch">Set Round Limit</string>
    <string name="round_limit_summary_on">Automatically end the game and announce the winner when
        the number of rounds below are completed
    </string>
    <string name="round_limit_summary_off">Don\'t automatically end the game when a number of
        rounds is completed
    </string>
    <string name="round_limit">Number of Rounds</string>

    <!-- Custom Names Preferences -->
    <string name="custom_names_switch">Use Custom Names</string>
    <string name="custom_names_summary_on">Apply the custom names below to the players to display
        in the navigation header and scoreboard
    </string>
    <string name="custom_names_summary_off">Don\'t apply custom names to players</string>
    <string name="player1_name">Player 1</string>
    <string name="player2_name">Player 2</string>

</resources>