<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_player1">

    <fragment
        android:id="@+id/navigation_player1"
        android:name="com.example.lostcitiesscorecalculator.ui.playerboard.PlayerBoardFragment"
        android:label="@string/title_player1"
        tools:layout="@layout/fragment_playerboard">
        <argument
            android:name="playerId"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/navigation_player2"
        android:name="com.example.lostcitiesscorecalculator.ui.playerboard.PlayerBoardFragment"
        android:label="@string/title_player2"
        tools:layout="@layout/fragment_playerboard">
        <argument
            android:name="playerId"
            app:argType="integer"
            android:defaultValue="2" />
    </fragment>
    <fragment
        android:id="@+id/navigation_score"
        android:name="com.example.lostcitiesscorecalculator.ui.scoreboard.ScoreboardFragment"
        android:label="@string/title_score"
        tools:layout="@layout/fragment_scoreboard">
    </fragment>
</navigation>