<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scoreboard.ScoreboardFragment"
    android:padding="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/scoreboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_score"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/light_white"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <GridLayout
            android:id="@+id/score_grid_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:padding="2dp">

            <!-- Headers for Round, Player 1, and Player 2 -->
            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/round"
                android:textColor="@color/tab_background_selected"
                android:gravity="center"
                style="@style/ScoreHeaderStyle"/>

            <TextView
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/title_player1"
                android:textColor="@color/player1_colour"
                android:gravity="center"
                style="@style/ScoreHeaderStyle"/>

            <TextView
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/title_player2"
                android:textColor="@color/player2_colour"
                android:gravity="center"
                style="@style/ScoreHeaderStyle"/>
            <View
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dark_purple"
                android:layout_marginBottom="10dp"/>
        </GridLayout>
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_rounds_placeholder"
            android:textSize="18sp"
            android:textColor="@color/light_white"
            android:textStyle="italic"
            android:gravity="center"
            android:visibility="visible"
            android:layout_marginTop="16dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="16dp">
            <GridLayout
                android:id="@+id/score_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:columnCount="3"
                android:padding="2dp">
            </GridLayout>
        </ScrollView>

        <Button
            android:id="@+id/submit_score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/label_submit"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>